--- a/DB-Generator.ipynb
+++ b/DB-Generator.ipynb
@@ -7,10 +7,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Tommaso\\AppData\\Local\\Temp\\ipykernel_3364\\4026529702.py:77: UserWarning: Pandas requires version '1.4.3' or newer of 'xlsxwriter' (version '1.3.7' currently installed).\n",
+      "  with pd.ExcelWriter(excel_file_path) as writer:\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Merged file with separate sheets saved to C:\\Users\\Tommaso\\Documents\\GitHub\\Data-Collection\\pareto_frontier_example\\merged_output_v1.xlsx\n"
+      "Merged file with separate sheets saved to C:\\Users\\Tommaso\\Documents\\GitHub\\Data-Collection\\pareto_frontier_example\\merged_output_new_v1.xlsx\n"
      ]
     }
    ],
@@ -18,6 +26,7 @@
     "import os\n",
     "import pandas as pd\n",
     "\n",
+    "# Define methods to obtain the final database\n",
     "def merge_csv_files(source_dir, destination_dir):\n",
     "    # Create a dictionary to store dataframes for each folder\n",
     "    dfs = {}\n",
@@ -29,7 +38,7 @@
     "    for root, _, files in os.walk(source_dir):\n",
     "        for file in files:\n",
     "            # Check if the file is a CSV and not one of the excluded files\n",
-    "            if file.endswith('.csv') and file not in ['unmet_demand.csv', 'unmet_demand_annual.csv']:\n",
+    "            if file.endswith('.csv') and file not in ['unmet_demand.csv', 'unmet_demand_annual.csv', 'pareto_point.csv']:\n",
     "\n",
     "                folder_name = os.path.basename(root)\n",
     "                file_path = os.path.join(root, file)\n",
@@ -90,10 +99,12 @@
     "        merged_df.dropna(axis=1, how='all', inplace=True)\n",
     "\n",
     "        # Write the merged dataframe to an Excel file with a separate sheet for each 'OriginalFileName'\n",
-    "        excel_file_path = os.path.join(destination_dir, 'merged_output.xlsx')\n",
+    "        excel_file_path = os.path.join(destination_dir, 'merged_db.xlsx')\n",
     "        with pd.ExcelWriter(excel_file_path) as writer:\n",
     "            # Create a separate sheet for each unique value in the 'OriginalFileName' column\n",
     "            for original_file_name, group_df in merged_df.groupby('OriginalFileName'):\n",
+    "                # Remove 'OriginalFileName' column\n",
+    "                group_df = group_df.drop(columns=['OriginalFileName'])\n",
     "                # Remove columns with all NaN/empty values before writing\n",
     "                group_df.dropna(axis=1, how='all', inplace=True)\n",
     "                group_df.to_excel(writer, index=False, sheet_name=original_file_name[:31])  # Limit sheet name length to 31 characters\n",
@@ -109,7 +120,7 @@
     "    else:\n",
     "        print(\"No valid scenarios found. No file created.\")\n",
     "\n",
-    "# Example usage:\n",
+    "# Apply the method above:\n",
     "source_directory = r'C:\\Users\\Tommaso\\Documents\\GitHub\\Data-Collection\\pareto_frontier_example'\n",
     "destination_directory = r'C:\\Users\\Tommaso\\Documents\\GitHub\\Data-Collection\\pareto_frontier_example'\n",
     "\n",
@@ -137,7 +148,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "hypatia_dev",
    "language": "python",
    "name": "python3"
   },
@@ -151,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
